--- a/capcap/WebContent/MainScreen.html
+++ b/capcap/WebContent/MainScreen.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert titlfdse here</title>
+<title>Insert titfdjfnjlfdse here</title>
 </head>
 <body>
 
