--- a/capcap/WebContent/MainScreen.html
+++ b/capcap/WebContent/MainScreen.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert titfdjfnjlfdse here</title>
-</head>
-<body>
-
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Viewport</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/design.css">
+	</head>
+	<body>
+		<div id="container-main">
+			<h1>Main Screen</h1>
+			<div id="button"><a href="CameraScreen.html">Camera</a></div>
+		</div>
+	</body>
 </html>
