--- a/capcap/WebContent/CameraScreen.html
+++ b/capcap/WebContent/CameraScreen.html
@@ -5,10 +5,20 @@
 		<title>Camera</title>
 		<link rel="stylesheet" href="css/video-design.css">
 	</head>
-	<body>
+	<body onload="init()">
 		<div id="camera-container">
 			<video autoplay="true" id="videoElement"></video>
 		</div>
+		<div id="dataContainerOrientation">
+      		No device orientation data
+    	</div>
+    	<div id="dataContainerMotion">
+      		No device motion data
+    	</div>
+    	<div>
+    		<video id="video" width="640" height="480" autoplay></video>
+    	</div>
 		<script type="text/javascript" src="js/show-video.js"></script>
+		<script type="text/javascript" src="js/motion.js"></script>
 	</body>
 </html>
