--- a/capcap/WebContent/MainScreen.html
+++ b/capcap/WebContent/MainScreen.html
@@ -11,6 +11,9 @@
 		<div id="container-main">
 			<h1>Main Screen</h1>
 			<div id="button"><a href="CameraScreen.html">Camera</a></div>
+			<button id="button" onclick="getLocation()"><a>Location</a></button>
+			<p id="location"></p>
 		</div>
+		<script type="text/javascript" src="js/locate-me.js"></script>
 	</body>
 </html>
