--- a/capcap/WebContent/CameraScreen.html
+++ b/capcap/WebContent/CameraScreen.html
@@ -29,8 +29,10 @@
     	<div id="JSONLatitude"></div>
     	<div id="JSONLongitude"></div>
     	<div id="eventType"></div>
+    	<script type="text/javascript" src="js/fulltilt-min.js"></script>
 		<script type="text/javascript" src="js/show-video.js"></script>
 		<script type="text/javascript" src="js/parse-json.js"></script>
 		<script type="text/javascript" src="js/position-icon.js"></script>
+		
 	</body>
 </html>
