--- a/capcap/WebContent/MainScreen.html
+++ b/capcap/WebContent/MainScreen.html
@@ -12,6 +12,7 @@
 			<h1>Main Screen</h1>
 			<div id="button"><a href="CameraScreen.html">Camera</a></div>
 			<button id="button" onclick="getLocation()"><a>Location</a></button>
+			<div id="button"><a href="Compass.html">Compass</a></div>
 			<p id="location"></p>
 		</div>
 		<script type="text/javascript" src="js/locate-me.js"></script>
