--- a/capcap/WebContent/CameraScreen.html
+++ b/capcap/WebContent/CameraScreen.html
@@ -7,7 +7,7 @@
 		<script defer src="font-awesome/fontawesome-free-5.0.9/svg-with-js/js/fontawesome-all.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	</head>
-	<body onload="init()">
+	<body onload="init(); getLocation(); createEvent();">
 		<div id="camera-container">
     		<video id="video" width="640" height="480" autoplay></video>
     	</div>
@@ -16,9 +16,6 @@
     	</div>
     	<div id="dataContainerMotion">
       		No device motion data
-    	</div>
-    	<div id="icon" class='icon'>
-    		<i class="fas fa-fire fa-7x" id="fire-icon"></i>
     	</div>
     	<div id="upicon" class='upicon'>
     		<i class="fas fa-arrow-alt-circle-up fa-7x" id="up-icon"></i>
@@ -29,6 +26,7 @@
     	<div id="JSONLatitude"></div>
     	<div id="JSONLongitude"></div>
     	<div id="eventType"></div>
+    	<p id="demo"></p>
     	<script type="text/javascript" src="js/fulltilt-min.js"></script>
 		<script type="text/javascript" src="js/show-video.js"></script>
 		<script type="text/javascript" src="js/parse-json.js"></script>
