--- a/capcap/WebContent/CameraScreen.html
+++ b/capcap/WebContent/CameraScreen.html
@@ -27,6 +27,7 @@
     	<div id="JSONLongitude"></div>
     	<div id="eventType"></div>
     	<p id="demo"></p>
+    	<p id="test"></p>]
     	<script type="text/javascript" src="js/fulltilt-min.js"></script>
 		<script type="text/javascript" src="js/show-video.js"></script>
 		<script type="text/javascript" src="js/parse-json.js"></script>
