--- a/capcap/WebContent/MainScreen.html
+++ b/capcap/WebContent/MainScreen.html
@@ -9,8 +9,9 @@
 	</head>
 	<body>
 		<div id="container-main">
-			<h1>Main Screen</h1>
+			<h1>Crisis Event Manager</h1>
 			<div id="button"><a href="CameraScreen.html">Camera</a></div>
+			<div id="button"><a href="EventsMap.html">Map</a></div>
 			<button id="button" onclick="getLocation()"><a>Location</a></button>
 			<div id="button"><a href="Compass.html">Compass</a></div>
 			<p id="location"></p>
