--- a/capcap/WebContent/MainScreen.html
+++ b/capcap/WebContent/MainScreen.html
@@ -10,10 +10,8 @@
 	<body>
 		<div id="container-main">
 			<h1>Crisis Event Manager</h1>
-			<div id="button"><a href="CameraScreen.html">Camera</a></div>
-			<div id="button"><a href="EventsMap.html">Map</a></div>
-			<button id="button" onclick="getLocation()"><a>Location</a></button>
-			<div id="button"><a href="Compass.html">Compass</a></div>
+			<a id="button" href="CameraScreen.html">Camera</a>
+			<a id="button" href="EventsMap.html">Map</a>
 			<p id="location"></p>
 		</div>
 		<script type="text/javascript" src="js/locate-me.js"></script>
