--- a/capcap/WebContent/MainScreen.html
+++ b/capcap/WebContent/MainScreen.html
@@ -10,9 +10,8 @@
 	<body>
 		<div id="container-main">
 			<h1>Crisis Event Manager</h1>
-			<a id="button" href="CameraScreen.html">Camera</a>
+			<a id="button" href="CameraScreen.html">AR View</a>
 			<a id="button" href="EventsMap.html">Map</a>
-			<p id="location"></p>
 		</div>
 		<script type="text/javascript" src="js/locate-me.js"></script>
 	</body>
