--- a/capcap/WebContent/MainScreen.html
+++ b/capcap/WebContent/MainScreen.html
@@ -12,6 +12,7 @@
 			<h1>Crisis Event Manager</h1>
 			<a id="button" href="CameraScreen.html">AR View</a>
 			<a id="button" href="EventsMap.html">Map</a>
+			<a id="button" href="EventsList.html">Events</a>
 		</div>
 		<script type="text/javascript" src="js/locate-me.js"></script>
 	</body>
