--- a/capcap/WebContent/EventsList.html
+++ b/capcap/WebContent/EventsList.html
@@ -4,8 +4,10 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link rel="stylesheet" href="css/table-design.css">
+<script defer src="font-awesome/fontawesome-free-5.0.9/svg-with-js/js/fontawesome-all.js"></script>
 </head>
 <body onload="fillTable();">
+	<h1>Active events</h1>
 	<div style="overflow-x:auto;">
 	  <table id="table">
 	    <tr>
@@ -15,6 +17,7 @@
 	      <th>Open on map</th>
 	    </tr>
 	  </table>
+	  <div class="loader"></div>
 	</div>
 	<script type="text/javascript" src="js/event-table.js"></script>
 </body>
