--- a/capcap/WebContent/EventsMap.html
+++ b/capcap/WebContent/EventsMap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Custom Markers</title>
+    <title>Events Map</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
