--- a/capcap/WebContent/ActiveTeams.html
+++ b/capcap/WebContent/ActiveTeams.html
@@ -7,11 +7,11 @@
 		<script defer src="font-awesome/fontawesome-free-5.0.9/svg-with-js/js/fontawesome-all.js"></script>
 	</head>
 	<body onload="fillTable();">
-		<h1>Active Events</h1>
+		<h1>Active Teams</h1>
 		<div style="overflow-x:auto;">
 		  <table id="table">
 		    <tr>
-		      <th>Event Type</th>
+		      <th>Team Type</th>
 		      <th>Latitude</th>
 		      <th>Longitude</th>
 		      <th>Open on map</th>
@@ -19,6 +19,6 @@
 		  </table>
 		  <div class="loader"></div>
 		</div>
-		<script type="text/javascript" src="js/event-table.js"></script>
+		<script type="text/javascript" src="js/team-table.js"></script>
 	</body>
 </html>
