--- a/capcap/WebContent/MainScreen.html
+++ b/capcap/WebContent/MainScreen.html
@@ -13,6 +13,7 @@
 			<a id="button" href="CameraScreen.html">AR View</a>
 			<a id="button" href="EventsMap.html">Map</a>
 			<a id="button" href="EventsList.html">Events</a>
+			<a id="button" href="ActiveTeams.html">Active Teams</a>
 		</div>
 	</body>
 </html>
