--- a/capcap/WebContent/ListEvents.html
+++ b/capcap/WebContent/ListEvents.html
@@ -32,7 +32,7 @@
 
 <!-- Add Google Maps -->
 
-<script type="text/javascript" src="js/fill-teams.js"></script>
+<script type="text/javascript" src="js/fill-events.js"></script>
 <!--
 To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
