--- a/capcap/WebContent/MainPage.html
+++ b/capcap/WebContent/MainPage.html
@@ -25,7 +25,6 @@
 
   <!-- Project Section -->
   <div class="w3-container w3-padding-32" id="projects">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Menu</h3>
   </div>
 
   <div class="w3-row-padding">
@@ -33,7 +32,7 @@
       <div class="w3-display-container">
       	<a href="CameraScreen.html">
         	<div class="w3-display-topleft w3-black w3-padding">AR View</div>
-        	<img src="images/ar_view.jpg" alt="House" style="width:100%">
+        	<img src="images/ar_view.jpg" alt="House" style="width:100%;">
         </a>
       </div>
     </div>
@@ -68,7 +67,7 @@
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
     <p>This website provides information that is out of significant importance. 
     Various teams and events can be seen as AR view or on the map. 
-    Application is developed for the purpose of a master thesis.
+    Application is developed for the purpose of a master thesis on Faculty of Electrical Engineering and Computing.
     </p>
   </div>
 
