--- a/capcap/WebContent/ActiveTeams.html
+++ b/capcap/WebContent/ActiveTeams.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>Crisis Event Manager</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/main-design.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+</head>
 <body onload="fillTable();"">
 
 
