--- a/capcap/WebContent/Event.html
+++ b/capcap/WebContent/Event.html
@@ -44,7 +44,7 @@
 
 </script>
 <script type="text/javascript" src="js/get-event.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0QOSOcvPTHCXrdrOSeDfWItKNtpnj7Dc&callback=myMap"></script>
 <!--
 To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
