--- a/capcap/WebContent/EventsMap.html
+++ b/capcap/WebContent/EventsMap.html
@@ -20,11 +20,11 @@
   </head>
   <body onload="countEvents();">
     <div id="map"></div>
+    
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
     </script>
  	<script type="text/javascript" src="js/events-on-map.js"></script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?callback=initMap">
-    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0QOSOcvPTHCXrdrOSeDfWItKNtpnj7Dc&callback=initMap"></script>
+    
   </body>
 </html>
