--- a/capcap/WebContent/MainPage.html
+++ b/capcap/WebContent/MainPage.html
@@ -99,7 +99,7 @@ function myMap()
   marker.setMap(map);
 }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0QOSOcvPTHCXrdrOSeDfWItKNtpnj7Dc&callback=myMap"></script>
 <!--
 To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
